force-app/main/default/objects/MS_Client__c.object
<CustomObject>
    <fields>
        <fullName>Adresse__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Adresse du Client</inlineHelpText>
        <label>Adresse</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Client__c</fullName>
        <displayFormat>C-{00000}</displayFormat>
        <externalId>true</externalId>
        <label>Identifiant</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Code_Postal__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Code Postal</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commentaire__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Commentaire</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Content_Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content Folder</label>
        <referenceTo>ContentFolder</referenceTo>
        <relationshipLabel>MS_Clients</relationshipLabel>
        <relationshipName>MS_Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Anciennete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date d&apos;Ancienneté</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delai_Paiement__c</fullName>
        <label>Délai Paiement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>E_mail__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Mail de l&apos;entreprise</description>
        <encryptionScheme>None</encryptionScheme>
        <label>E-mail</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Pas_de_Mailing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pas de Mailing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Numéro de téléphone</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Site_Web__c</fullName>
        <description>Site Web de l&apos;Entreprise</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Site Web</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ville__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ville</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>MS_Client</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Code_Client__c</columns>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>Adresse__c</columns>
        <columns>Code_Postal__c</columns>
        <columns>Ville__c</columns>
        <columns>Phone__c</columns>
        <columns>Delai_Paiement__c</columns>
        <columns>Pas_de_Mailing__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nom du Client</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MS_Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>